# gftbs.github.io

./: .gitignore  index.md  math4610.md  math5620.md
Homework/: TS1.md  TS2.md  TS3.md  TS4.md  TS5.md  TS6.md  TS7.md  TS8.md  hw_toc.md
Software_Manual/: toc.md
Software_Manual/procedures/: CrossProduct  MatTimesVector.md  absoluteError.md  doublePrecision.md  relError.md  singlePrecision.md
Software_Manual/procedures/Matrix/: diagMatSolve.md  gaussianSolve.md  lowerTMatSolve.md  luFactorization.md  luPivoting.md  luSolve.md  refMat.md  upperTMatSolve.md
Software_Manual/procedures/ts6/: genSquareMat.md  jacobiSolve.md
math5620/Homework/: TS1.md  TS2.md  TS3.md  TS4.md  TS5.md  TS6.md
math5620/Software_Manual/: approxU.md  diffCoef.md  genTriDiagMat.md  ninePoint.md  pentaDiag.md  toc.md
math5620/src/: CMakeLists.txt  TS2Demo.cpp  TS3Demo.cpp  TS4Demo.cpp  TS5Demo.cpp  TS6Demo.cpp  library.cpp  library.hpp  main.cpp
src/: CMakeLists.txt  HelloWorld.cpp  TS2Demo.cpp  TS3Demo.cpp  TS4Demo.cpp  TS5Demo.cpp  TS6Demo.cpp  absoluteError.cpp  doublePrecision.cpp  library.cpp  library.hpp  main.cpp  relativeError.cpp  singlePrecision.cpp
